Adjust portfolio columns so they break at the correct points in time.

--- a/css/src/_layout.scss
+++ b/css/src/_layout.scss
@@ -119,13 +119,49 @@ p.meta {
 		line-height: 10pt;
 		width: 100%;
 
-		@include respond-to( 500px ) { width: 50%; }
+		@include respond-to( 500px ) { 
+			width: 50%; 
+			
+			&:nth-child(3), &:nth-child(5), &:nth-child(7), &:nth-child(9), &:nth-child(11), &:nth-child(13), &:nth-child(15), &:nth-child(17), &:nth-child(19), &:nth-child(21) {
+				clear: left;
+			}
+		}
 
-		@include respond-to( 768px ) { width: 33.33%; }
+		@include respond-to( 768px ) { 
+			width: 33.3332%;
 
-		@include respond-to( 1000px ) { width: 25%; }
+			&:nth-child(3), &:nth-child(5), &:nth-child(7), &:nth-child(9), &:nth-child(11), &:nth-child(13), &:nth-child(15), &:nth-child(17), &:nth-child(19), &:nth-child(21), &:nth-child(23), &:nth-child(25), &:nth-child(27), &:nth-child(29) {
+				clear: none;
+			}
 
-		@include respond-to( 1500px ) { width: 20%; }
+			&:nth-child(4), &:nth-child(7), &:nth-child(11), &:nth-child(14), &:nth-child(17), &:nth-child(20), &:nth-child(23), &:nth-child(26), &:nth-child(29) {
+				clear: left;
+			}
+		}
+
+		@include respond-to( 1000px ) {
+			width: 25%;
+
+			&:nth-child(4), &:nth-child(7), &:nth-child(11), &:nth-child(14), &:nth-child(17), &:nth-child(20), &:nth-child(23), &:nth-child(26), &:nth-child(29) {
+				clear: none;
+			}
+
+			&:nth-child(5), &:nth-child(9), &:nth-child(13), &:nth-child(17), &:nth-child(21), &:nth-child(25), &:nth-child(29), &:nth-child(33), &:nth-child(37) {
+				clear: left;
+			}
+		}
+
+		@include respond-to( 1500px ) {
+			width: 20%;
+
+			&:nth-child(5), &:nth-child(9), &:nth-child(13), &:nth-child(17), &:nth-child(21), &:nth-child(25), &:nth-child(29), &:nth-child(33), &:nth-child(37) {
+				clear: none;
+			}
+
+			&:nth-child(6), &:nth-child(11), &:nth-child(17), &:nth-child(22), &:nth-child(27), &:nth-child(32), &:nth-child(37) {
+				clear: left;
+			}
+		}
 		
 		.no-touch & img {
 			filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
